--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
 
 Hello My name Is Grace Adeboyejo.I am a rising sophmore and I live in Maryland. I am intrested in STEM and IT so I wanted to take this program. I like coding, I play the harp, and I like to travel. Lastly, I am looking forward to meeting new people!:)
 </body>
+<head>
+    meta charset= "utf-8"
+    <title>IT Girls BLOG</title>
+</head>
+<body>
+    <a href= "index.html">Home</a>  <a href= "index.html">Blog</a>
+    <h1>Grace's IT Girls Blog</h1>
+    <h2>All about Cryptology</h2>
+    <p>Grace Adeboyejo / July 21,2021</p>
+    <p> I have been impacted by Cryptology because it showed me a new career feild. I believe Cryptology is positive because it helped during marjor wars. </p>
+    <p>1. Most of my recoomendations are on point.</p>
+    <p>2.However, if the recoomendations are unfair, I simply put not interested or I report the recoomendation.</p>
+    <p>3. In class I made a model where I chose the same image (heart) but they were to dfferent colors and one was blurry. I wanted to see if the machine could tell the difference. It can help people who struggle with differentiating colors.</p>
+    <hr>
 
+</body>
 </html>
