--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <a href="index.html">Home</a> | <a href="blog grace.html">Blog</a>
 
-<img src="blog_banner.jpg" alt="blog_banner.png.">
+<img src="blog_banner.png" alt="Grace is an IT Girl">
 
 Hello My name Is Grace Adeboyejo. I am a rising sophmore and I live in Maryland. I am intrested in STEM and IT so I wanted to take this program. I like coding, I play the harp, and I like to travel. Lastly, I am looking forward to meeting new people!:)
 
