--- a/blog grace.html
+++ b/blog grace.html
@@ -31,6 +31,10 @@
         <p>1. Our game was based of the game 'Amoung Us'. In Amoung Us, you have task you have to complete as crewmemeber. So, we decided that the teachers would have task to remeber the pronounsof all of their students.</p>
         <p>2. In Amoung Us, there are different maps you can play on. Our map was a classroom.</p>
         <p>3. The avatars in our game are randomly assigned so that teachers could get used to seeing different combinations of "students". This means that the pronouns did not match up with the avatar so the teacher could remember the student's pronouns from memory and not based on what the avatar looked like.</p>
+        <p> Below is a link to my teams google slides so you can learn more about our game.
+            <iframe>https://docs.google.com/presentation/d/1Yn8tp9pIA3ojW20UIzeEdOcFBOVxj5Y5CaOt5-WUeVA/edit?usp=sharing </iframe>
+
+        </p>
         <hr>
     </body>
 </html>
