--- a/blog grace.html
+++ b/blog grace.html
@@ -12,10 +12,10 @@
 
         <h2>All about Cryptology</h2>
         <p>Grace Adeboyejo / July 21,2021</p>
-        <p> I have been impacted by Cryptology because it showed me a new career feild. I believe Cryptology is positive because it helped during marjor wars. </p>
-        <p>1. Most of my recoomendations are on point.</p>
-        <p>2. However, if the recoomendations are unfair, I simply put not interested or I report the recoomendation.</p>
-        <p>3. In class, I made a model where I chose the same image (heart) but they were to dfferent colors and one was blurry. I wanted to see if the machine could tell the difference. It can help people who struggle with differentiating colors.</p>
+        <p> I have been impacted by Cryptology because it showed me a new career field. I believe Cryptology is positive because it helped during major wars. </p>
+        <p>1. Most of my recommendations are on point.</p>
+        <p>2. However, if the recommendations are unfair, I simply put not interested or I report the recommendation.</p>
+        <p>3. In class, I made a model where I chose the same image (heart) but they were to different colors and one was blurry. I wanted to see if the machine could tell the difference. It can help people who struggle with differentiating colors.</p>
 
         <h3>My Favorite HTML Tutorial</h3>
         <p>Grace Adeboyejo / July 28, 2021</p>
@@ -28,7 +28,7 @@
         <h4>My Group's Game Proposal</h4>
         <p>Grace Adeboyejo / August 2,2021</p>
         <p> On Friday, July 30,2021, My group created a proposal for a game that would help teachers create more inclusive spaces for gender identity.</p>
-        <p>1. Our game was based of the game 'Amoung Us'. In Amoung Us, you have task you have to complete as crewmemeber. So, we decided that the teachers would have task to remeber the pronounsof all of their students.</p>
+        <p>1. Our game was based off of the game 'Among Us'. In Among Us, you have task you have to complete as a crewmemeber. So, we decided that the teachers would have task to remeber the pronouns of all of their students.</p>
         <p>2. In Amoung Us, there are different maps you can play on. Our map was a classroom.</p>
         <p>3. The avatars in our game are randomly assigned so that teachers could get used to seeing different combinations of "students". This means that the pronouns did not match up with the avatar so the teacher could remember the student's pronouns from memory and not based on what the avatar looked like.</p>
         <p> Below is a link to my teams google slides so you can learn more about our game.
