--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <img src="blog_banner.jpg" alt="Grace is an IT Girl">
 
-Hello! My name is Grace Adeboyejo. I am a rising sophmore and I live in Maryland. I am intrested in STEM and IT so I wanted to take this program. I like coding, I play the harp, and I like to travel. Lastly, I am looking forward to meeting new people!:)
+Hello! My name is Grace Adeboyejo. I am a rising sophomore and I live in Maryland. I am intrested in STEM and IT so I wanted to take this program. I like coding, I play the harp, and I like to travel. Lastly, I am looking forward to meeting new people!:)
 
 
 </body>
